force-app/main/default/objects/OMVPortalLayoutConfiguration__c/OMVPortalLayoutConfiguration__c.object-meta.xml
<CustomObject>
    <description>Custom object used to define the layout of certain components of the OMV Portal according to the Customer Country</description>
    <label>OMV Portal Layout Configuration</label>
    <nameField>
        <displayFormat>OPLN-{00000}</displayFormat>
        <label>OMV Portal Layout Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMV Portal Layouts Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>