force-app/main/default/objects/OMVPortalLayoutConfiguration__c/fields/CustomerCountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCountryISOCode__c</fullName>
    <description>ISO country of the customer, that will use this layout configuration,</description>
    <label>Customer Country ISO Code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>