force-app/main/default/objects/OMVPortalLayoutConfiguration__c/fields/FooterLogo__c.field-meta.xml
<CustomField>
    <fullName>FooterLogo__c</fullName>
    <description>Unique name of the document that contains the logo used in the bottom of the OMV portal pages</description>
    <label>Footer Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>