force-app/main/default/objects/OMVPortalLayoutConfiguration__c/fields/HeaderLogo__c.field-meta.xml
<CustomField>
    <fullName>HeaderLogo__c</fullName>
    <description>Unique name of the document that contains the logo used in the top of the OMV portal pages</description>
    <label>Header Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>