force-app/main/default/objects/OMVPortalLayoutConfiguration__c/fields/HeaderText__c.field-meta.xml
<CustomField>
    <fullName>HeaderText__c</fullName>
    <description>Text that is presented on top of the main menu</description>
    <label>Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>