force-app/main/default/objects/OMVPortalLayoutConfiguration__c/fields/HeroText__c.field-meta.xml
<CustomField>
    <fullName>HeroText__c</fullName>
    <description>Text that is presented on the &quot;hero&quot; component in the home page.</description>
    <label>Hero Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>