force-app/main/default/objects/OMVPortalLayoutConfiguration__c/fields/MenuEnergyLineColor__c.field-meta.xml
<CustomField>
    <fullName>MenuEnergyLineColor__c</fullName>
    <description>hexadecimal color code to be used in the menu of the OMV Portal.</description>
    <label>Menu Energy Line Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>